[package]
name = "harptool"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
dirs = "3.0.2"
colored = "2"
itertools = "0.10.3"
raqote = { version = "0.8.1", features = ["text"], optional = true }
font-kit = "0.10"

[features]
default = ["export"]
export = ["dep:raqote"]
